# py_bindings_with_docker

./: CMakeLists.txt  Dockerfile  README.md  bindings.cpp  pyproject.toml  svd.cpp  svd.h  test_svd.py
