[build-system]
requires = [
    "setuptools>=45",
    "scikit-build-core[pyproject]>=0.4.1",
    "pybind11>=2.10.0",
    "cmake>=3.15"
]
build-backend = "scikit_build_core.build"

[project]
name = "svd-cpp"
version = "0.1.0"
description = "SVD decomposition using C++ with Python bindings"
authors = [
    {name = "Remizov Oleg", email = "remizov2003@gmail.com"},
]

license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "scipy>=1.7",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"